feat: implement welcome modal for first-time users and enhance button tooltip in PRAXIS Chrome Extension

--- a/chrome-extension/popup/popup.html
+++ b/chrome-extension/popup/popup.html
@@ -9,6 +9,58 @@
 </head>
 
 <body>
+    <!-- WELCOME MODAL (First-time users) -->
+    <div id="welcome-modal" class="modal hidden">
+        <div class="modal-content">
+            <div class="welcome-header">
+                <div class="logo-large">⚡ PRAXIS</div>
+                <h2>Welcome to PRAXIS</h2>
+                <p class="welcome-tagline">Transform your AI prompts into expert-level instructions</p>
+            </div>
+            
+            <div class="welcome-body">
+                <div class="feature-list">
+                    <div class="feature-item">
+                        <span class="feature-icon">✦</span>
+                        <div>
+                            <strong>One-click enhancement</strong>
+                            <p>Instantly upgrade any prompt you write</p>
+                        </div>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🎯</span>
+                        <div>
+                            <strong>Platform-optimized</strong>
+                            <p>Works seamlessly on ChatGPT, Claude, Gemini, Grok</p>
+                        </div>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🚀</span>
+                        <div>
+                            <strong>10x better results</strong>
+                            <p>Get precise, expert-level responses every time</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="how-it-works">
+                    <h3>How to use:</h3>
+                    <ol>
+                        <li>Sign in with your PRAXIS account (or create one free)</li>
+                        <li>Visit ChatGPT, Claude, Gemini, or Grok</li>
+                        <li>Click the <strong>Enhance</strong> button above the text field</li>
+                        <li>Watch your prompt transform!</li>
+                    </ol>
+                </div>
+            </div>
+
+            <div class="welcome-footer">
+                <button id="welcome-continue-btn" class="btn-primary btn-large">Get Started</button>
+                <p class="welcome-note">Free account • 100 enhancements included</p>
+            </div>
+        </div>
+    </div>
+
     <!-- LOGIN VIEW -->
     <div id="login-view" class="view">
         <div class="header">
